--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="" data-after="Home">Home</a></li>
-            <li><a href="" data-after="Service">Overview</a></li>
-            <li><a href="" data-after="About">Prototype</a></li>
-            <li><a href="" data-after="Contact">SDGs</a></li>
-            <li><a href="" data-after="Contact">Inquiry</a></li>
+            <li><a href="https://futureprogram393847194.github.io/sciencefestahome/" data-after="Home">Home</a></li>
+            <li><a href="#" data-after="Service">Overview</a></li>
+            <li><a href="https://futureprogram393847194.github.io/sciencefestaprototype/" data-after="About">Prototype</a></li>
+            <li><a href="https://futureprogram393847194.github.io/sciencefestasdgs/" data-after="Contact">SDGs</a></li>
+            <li><a href="https://futureprogram393847194.github.io/sciencefestainquiry/" data-after="Contact">Inquiry</a></li>
           </ul>
         </div>
       </div>
